erDiagram
    VENUES {
        bigint id PK
        string name
        string address
        string city
        int capacity
        text facilities
        string contact_name
        string contact_email
        string contact_phone
        decimal daily_rate
        string rate_currency
    }

    EVENTS {
        bigint id PK
        string title
        text description
        string banner_image_url
        date event_date
        date end_date
        time start_time
        time end_time
        bigint venue_id FK
        string own_venue_name
        string own_venue_address
        string category
        json tags
        string status
        boolean allow_waitlist
        string organiser_user_id
        decimal avg_rating
        datetime created_at
    }

    TICKET_TIERS {
        bigint id PK
        bigint event_id FK
        string name
        decimal price
        string currency
        int capacity
        int max_per_order
        string description
    }

    EVENT_SCHEDULE_SLOTS {
        bigint id PK
        bigint event_id FK
        string session_title
        date session_date
        time start_time
        time end_time
        string speaker_name
        string location_note
    }

    VENUE_BOOKINGS {
        bigint id PK
        bigint venue_id FK
        bigint event_id FK
        datetime start_time
        datetime end_time
        string status
        string booked_by_user_id
        decimal venue_daily_rate
        int booking_days
        decimal total_venue_cost
        string cost_currency
        datetime created_at
    }

    VENUES ||--o{ EVENTS : hosts
    EVENTS ||--o{ TICKET_TIERS : has
    EVENTS ||--o{ EVENT_SCHEDULE_SLOTS : has
    VENUES ||--o{ VENUE_BOOKINGS : contains
    EVENTS ||--o{ VENUE_BOOKINGS : allocates
